Prevent horizontal scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #fff;
   color: $text_color;
