--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -3,6 +3,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: $background_color;
   color: $text_color;
